Added Catatan Tambahan Styling

--- a/index.html
+++ b/index.html
@@ -77,13 +77,15 @@
             
                     <button type="submit">Calculate Fee</button><br><br>
                 </form>
+            </div>
 
-                <div class="subJudul">Input Catatan Tambahan : </div>
+            <div class="subJudul">Input Catatan Tambahan : </div>
+            <div class="catatan">
                 <form id="catatanTambahan">
                     <input type="text" name="catatanTambahan" placeholder="Catatan Tambahan" required>
                     <button type="submit">Add Catatan Tambahan</button>
                 </form>
-            </div>
+            </div>    
 
             <div class="output">
                 <div class="kotak-serviceOrder">
@@ -107,7 +109,7 @@
 
             <div class="output">
                 <div class="kotak-serviceOrder">
-                    <div class="subJudul">Keterangan For "Catatan Tambahan"</div>
+                    <div class="subJudul">Output For "Catatan Tambahan"</div>
                     <div class="listOutput" id="catatanTambahan">
                         <!-- Output #3 will be displayed here-->
                          
