Nambahin implementation terhadap API Teman

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <div class="subJudul">Input Catatan Tambahan : </div>
             <div class="catatan">
-                <form id="catatanTambahan">
+                <form id="catatanTambahanForm">
                     <input type="text" name="catatanTambahan" placeholder="Catatan Tambahan" required>
                     <button type="submit">Add Catatan Tambahan</button>
                 </form>
@@ -126,7 +126,7 @@
         </div>
 
         <div id="output">
-            <!-- Output #3 will be displayed here -->
+            <!-- Output #4 will be displayed here -->
 
         </div>
 
